add first iteration of main page tiles

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="A stylistic personal webpage.">
+    <meta >
 
     <link rel="stylesheet" href="style.css"/>
 
@@ -21,6 +22,18 @@
             </li>
         </ul>
     </header>
+
+    <div class="tiles">
+        <div class="tiles-item-main">
+            <img class="photo-circular" src="photocropped.jpg">
+            <h1>Hi, I'm Ege!</h1>
+        </div>
+        <br>
+        <div class="tiles-item-second">
+            <img class="photo-circular" src="photocropped.jpg">
+            <h1>Hi, I'm Ege!</h1>
+        </div>
+    </div>
 </body>
 
 </html>
